--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.0.0",
     "@sendgrid/mail": "^7.4.6",
+    "aws-amplify": "^4.3.10",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
