--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -11,6 +11,11 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "yuiyoshimuracommon": {
+      "providerPlugin": "awscloudformation",
+      "service": "LambdaLayer",
+      "build": true
     }
   },
   "api": {
