--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.0.0",
-    "@sendgrid/mail": "^7.4.6",
+    "@sendgrid/mail": "^7.6.0",
+    "ask-sdk": "^2.11.0",
     "aws-amplify": "^4.3.10",
     "next": "11.1.2",
     "react": "17.0.2",
