--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -16,6 +16,12 @@
       "providerPlugin": "awscloudformation",
       "service": "LambdaLayer",
       "build": true
+    },
+    "sampleFunction": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": []
     }
   },
   "api": {
@@ -26,6 +32,20 @@
         {
           "category": "function",
           "resourceName": "sendgrid",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
+        }
+      ]
+    },
+    "sampleApi": {
+      "service": "API Gateway",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "sampleFunction",
           "attributes": [
             "Name",
             "Arn"
